@@ -4,6 +4,8 @@ Date: ????
   Locale:
     - Added Ukranian translations (crowdin)
     - Started translations for other languages (crowdin)
+  Features:
+    - Compatibility can now disable considering technology
   Bugfixes:
     - Fixed a possible desync for on_load
     - A mineable resource that has no results now doesn't crash
